--- a/moodle/mod/lamslesson/styles.css
+++ b/moodle/mod/lamslesson/styles.css
@@ -1,1 +1,6 @@
-.path-mod-lamslesson .smalltext {font-size: 0.75em;}
+/** General Styles **/
+.path-mod-lamslesson .smalltext {text-align:right;font-size: 0.75em;}
+.path-mod-lamslesson .centerlink {text-align:center;padding-top: 15px; padding-bottom:5px;}
+.path-mod-lamslesson .progress-header {text-align:center;font-weight: bold;padding-top: 5px; padding-bottom:5px;}
+.path-mod-lamslesson .super {position:relative;bottom:0.5em;color:red;font-size:0.8em;}
+
