LDEV-3180 Load LAMS sequences on demand

--- a/lams_bb_integration/web/includes/css/folders.css
+++ b/lams_bb_integration/web/includes/css/folders.css
@@ -61,4 +61,9 @@
 	text-decoration: none;
 }
 
+/* the style of the selected node */
+.ygtv-highlight1, .ygtv-highlight1 .ygtvlabel {
+	background-color: #dfeffc;
+}
+
 
