LDEV-3386: implementing time-to-live for login requests in Moodle (see LDEV-3382)

--- a/moodle/mod/lamslesson/styles.css
+++ b/moodle/mod/lamslesson/styles.css
@@ -12,6 +12,7 @@
 #monitorbutton a {text-decoration:none;padding-left: 2.25em;background: url([[pix:a/search]]) 5% 50% no-repeat;}
 #previewbutton a {text-decoration:none;padding-left: 2.25em;background: url([[pix:a/search]]) 5% 50% no-repeat;}
 #validatebutton a {text-decoration:none;padding-left: 2.25em;background: url([[pix:i/admin]]) 5% 50% no-repeat;}
+#offsetbutton a {text-decoration:none;padding-left: 2.25em;background: url([[pix:i/log]]) 5% 50% no-repeat;}
 
 /* Copyright (c) 2006 Yahoo! Inc. All rights reserved. 
 This file is from:
