LDEV-3676: adding panel-title customisation so the header text doesn't look too big

--- a/lams_central/web/css/defaultHTML_learner.css
+++ b/lams_central/web/css/defaultHTML_learner.css
@@ -137,6 +137,10 @@ LAMS Learner Style
 .panel-admin-title {
 	color:#337ab7 !important;
 }
+.panel-title {
+	font-size: 	inherit;
+	font-weight: bolder;
+}
 body.stripes {
   background: url('/lams/images/css/light-fabric.jpg');
 }
