LDEV-3978: Allow selecting and moving multiple learners in Monitoring.

--- a/lams_monitoring/web/css/monitorLesson.css
+++ b/lams_monitoring/web/css/monitorLesson.css
@@ -105,6 +105,9 @@ div.dialogContainer td.pageCell {
 	width: 100px;
 }
 
+span#learnerGroupMultiSelectLabel {
+	font-size: 10px;
+}
 /********** LESSON TAB STYLES **********/
 div#tabLesson {
 /*	height: 540px;*/
