--- a/lams_central/web/css/thickbox.css
+++ b/lams_central/web/css/thickbox.css
@@ -140,3 +140,10 @@ margin-top: expression(0 - parseInt(this.offsetHeight / 2) + (TBWindowMargin = d
   margin-top:1px;
   _margin-bottom:1px;
 }
+
+/* Added by LAMS. Enables scrolling on iOS devices. */
+#TB_iframeContent, #TB_overlay, #TB_window {
+	overflow-y: scroll !important;
+	-webkit-overflow-scrolling: touch !important;
+	height:95%;
+}
