LDEV-4004 Added ability to scroll Thickbox pages using iOS devices

--- a/lams_central/web/css/thickbox.css
+++ b/lams_central/web/css/thickbox.css
@@ -145,4 +145,5 @@ margin-top: expression(0 - parseInt(this.offsetHeight / 2) + (TBWindowMargin = d
 #TB_iframeContent, #TB_overlay, #TB_window {
 	overflow-y: scroll !important;
 	-webkit-overflow-scrolling: touch !important;
+	height:95% !important; 
 }
