LDEV-4014: Adjust margins and padding in monitor dialog content. Use same tabs as in tool interfaces. Allow non-imported content in tabs. Allow exact page in help link. Resize LD SVG in Sequence tab in monitoring dialog on dialog resize. Minor layout adjustments.

--- a/lams_central/web/css/index.css
+++ b/lams_central/web/css/index.css
@@ -29,6 +29,7 @@ td#messageCell {
 .dialogContainer .modal-body {
 	height : 100%;
 	max-height: calc(100% - 60px);
+	padding: 0;
 }
 
 .dialogContainer iframe {
