--- a/lams_central/web/css/main.css
+++ b/lams_central/web/css/main.css
@@ -9,7 +9,7 @@ html {
 }
 #offcanvas {
 	position: fixed;
-	width: 300px;
+	width: 220px;
 	z-index: 10;
 	height: 100%;
 	background: #2f4050;
@@ -29,7 +29,7 @@ html {
 }
 #page-wrapper {
 	min-height: 1000px;
-	margin: 0 0 0 300px;
+	margin: 0 0 0 220px;
 	padding: 10px 20px 0px;
 }
 .offcanvas-hidden #offcanvas {
@@ -62,6 +62,15 @@ html {
 	}
 }
 
+.content {
+	/*background: #fff;*/
+	padding: 7px 10px;
+	background: #fff;
+}
+#org-container {
+	padding: 17px 10px 17px 25px;
+}
+
 /*FOOTER*/
 footer {
     background: #fff;
@@ -79,13 +88,17 @@ a {
 }
 
 /*OFFCANVAS BAR*/
-#offcanvas-menu > li > a, .tablesorter a {
+#favorite-organisations {
+    border-top: 1px solid rgba(255, 255, 255, 0.16);
+	border-bottom: 1px solid rgba(255, 255, 255, 0.16);
+}
+#favorite-organisations > li > a, .tablesorter a {
     color: #a7b1c2;
     font-weight: 400;
     padding: 14px 20px 14px 25px;
 }
-#offcanvas-menu > li > a:hover,
-#offcanvas-menu > li > a:focus,
+#favorite-organisations > li > a:hover,
+#favorite-organisations > li > a:focus,
 .pagesize:hover,
 .tablesorter a:hover,
 .tablesorter a:focus {
@@ -109,22 +122,20 @@ a {
     border-right: 10px solid #19aa8d;
     background: #293846;
 }
-li.offcanvas-logo {
+.offcanvas-logo {
 	padding: 20px 0px 0px 25px;
     background-color: #293846;
 }
-img.offcanvas-logo{
+.offcanvas-logo img{
 	width: 100px;
 }
-li.offcanvas-header {
-	padding: 10px 0px 0px 0px;
+.offcanvas-header {
+	padding: 15px 0px 0px 0px;
     background-color: #293846;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.16);
 }
-li.offcanvas-search {
-	padding: 20px 19px 10px;
+.offcanvas-search {
+	padding: 15px 19px 15px;
 	margin-bottom: 0;
-	border-top: 1px solid rgba(255, 255, 255, 0.16);
 }
 .offcanvas-search .form-control {
     box-shadow: inset 0 1px 0px rgba(208, 206, 206, 0.25);
@@ -154,12 +165,15 @@ li.offcanvas-search {
 .ts-pager .btn{
 	color: #2f4050;
     background-color: #a7b1c2;
+    padding: 2px 5px;
+    line-height: 1;
 }
 .tablesorter tfoot i {
 	font-size: 11px;
 }
 .tablesorter tfoot th {
-	    background-color: #25323E !important;
+	background-color: #293846 !important;
+	padding: 10px 0;
 }
 
 .pagesize {
@@ -168,7 +182,6 @@ li.offcanvas-search {
     cursor: pointer;
 }
 
-/*ICON*/
 .icon-remove {
 	cursor: pointer;
 	position: absolute;
@@ -238,7 +251,8 @@ ul.dropdown-usermenu li {
     margin: 2px 2px 0;
     width: 98% !important;
 }
-/*HEADER links*/
+
+/*TOP HEADER LINKS*/
 .offcanvas-toggle-wrapper:hover, ul.dropdown-usermenu li a:focus, ul.dropdown-usermenu li a:hover, .top_nav .nav > li > a:hover, .top_nav .nav .open > a, .top_nav .nav .open > a:focus, .top_nav .nav .open > a:hover {
     background: #D9DEE4;
 }
@@ -300,17 +314,232 @@ ul.dropdown-usermenu li {
 	border-radius: 10px;
 }
 
-/*MAIN*/
-.content {
-	/*background: #fff;*/
-	padding: 7px 10px;
-	background: #fff;
+/*DIALOGS*/
+.dialogContainer {
+	-webkit-overflow-scrolling: touch !important;
 }
-.container-turned-off-lams {
-	    background: #fff;
-    padding: 7px 10px;
+
+.dialogContainer .modal-body {
+	height : 100%;
+	max-height: calc(100% - 60px);
+	padding: 0;
 }
-/*OLDER STUFF*/
-.orgTab {
-	padding: 10px 0 10px 15px;
+
+.dialogContainer iframe {
+	width: 100%;
+	height: 100%;
+	border: none;
+}
+
+.dialogContainer button {
+	cursor: pointer;
+}
+.dialogContainer button:focus {
+	outline: none;
+}
+
+.dialogContainer button .fa {
+  font-size: 16px;
+  margin-left: 10px;
+}
+
+.dialogContainer .ui-draggable .modal-header {
+	cursor: move;
+}
+
+#dialogMinContainer {
+	height: 35px;
+	bottom: 1px;
+	left: 1px;
+	position: fixed;
+	right: 1px;
+	z-index: 9999;
+}
+
+.dialogMin {
+	overflow: hidden !important;
+	padding: 0 !important;
+	margin: 0;
+	float: left;
+	position: static !important;
+}
+
+.dialogMin .modal-title {
+	white-space: nowrap;
+	overflow: hidden;
+}
+
+.dialogMin .modal-dialog {
+	left: 0 !important;
+	top: 0 !important;
+}
+
+.dialogMin .modal-dialog, .dialogMin .modal-content {
+	width: 250px !important;
+	height: 35px !important;
+	margin: 0 !important;
+	padding: 0 !important;
+}
+
+.dialogMin .modal-header {
+	height: 100%;
+	margin: 0 !important;
+	padding: 3px 5px !important;
+}
+
+.ui-dialog .ui-dialog-content {
+	padding: 3px;
+}
+
+#dialogPrivateNotifications table tr:first-child td {
+	font-weight: bold;
+	text-align: center;
+}
+
+#dialogPrivateNotifications td.notificationsReadCell {
+	font-size: 16px;
+	width: 30px;
+	text-align: center;
+}
+
+#dialogPrivateNotifications td.notificationsPendingCell {
+	font-weight: bold;
+}
+
+#dialogPrivateNotifications td.notificationsClickableCell:hover {
+	cursor: pointer;
+	border-color: #9be0f9;
+	background-color: #F0F8FF;
+	/* CSS3 glow effect: */
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	border-radius: 6px;
+	-moz-box-shadow: 0 0 5px #A6E5FD;
+	-webkit-box-shadow: 0 0 5px #A6E5FD;
+	box-shadow: 0 0 5px #A6E5FD;
+}
+
+/* GROUP CONTAINER */
+.j-single-lesson {
+	list-style: none;
+	margin: 6px;
+	padding: 3px 3px 3px 10px;
+	position: relative;
+}
+
+.j-single-lesson:hover {
+	border-color: #9be0f9;
+	background-color: #F0F8FF;
+	display: block;
+	/* CSS3 glow effect: */
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+	-moz-box-shadow: 0 0 5px #A6E5FD;
+	-webkit-box-shadow: 0 0 5px #A6E5FD;
+	box-shadow: 0 0 5px #A6E5FD;
+}
+
+.j-single-lesson:hover .lesson-actions {
+	opacity: 1;
+	filter: alpha(opacity = 100); /* msie */
+	display: block;
+}
+
+.j-single-lesson:hover .mycourses-monitor-img {
+}
+
+.j-single-lesson:hover .mycourses-mark-img {
+}
+
+.j-single-lesson:hover .mycourses-notifications-img {
+}
+
+.j-single-lesson:hover .mycourses-conditions-img {
+}
+
+.j-single-lesson:hover .mycourses-removelesson-img {
+}
+
+.j-single-lesson:hover .mycourses-move-img {
+	background: url('../images/css/arrow_move.png') no-repeat 0 0px;
+}
+
+.lesson-actions {
+	float: right;
+	font-size: 1.2em;
+	opacity: 0.3;
+	filter: alpha(opacity = 10); /* msie */
+}
+
+.lesson-actions a {
+	border-bottom: none;	
+}
+
+.child-org-name {
+	float: left;
+	padding-top: 5px;
+}
+
+.split-ui-button+ul {
+	z-index: 1;
+}
+
+.split-ui-button+ul li {
+	list-style-type: none;
+}
+
+.split-ui-button+ul li a {
+	border: none;
+}
+
+.split-ui-button div:first-child {
+	margin-right: -0.4em;
+}
+
+.split-ui-button + ul span {
+	color: #999;
+}
+
+.ui-button, .split-ui-button div {
+	font-size: 12px !important;
+	font-weight: normal !important;
+}
+
+a.sorting {
+	border-bottom: none;
+	cursor: pointer;
+}
+
+.lesson-table {
+	margin: 0 auto;
+	width: 100%;
+}
+
+.subgroup-lesson-table {
+	padding-top: 30px;
+}
+
+.course-right-buttons {
+	padding-right: 20px;
+}
+
+.group-name {
+	margin-top: 20px;
+	margin-left: 30px;
+}
+
+.group-name p {
+	padding-top: 0px;
+	margin-bottom: 0px;
+	padding-left: 0px;
+	margin-left: 0px;
+}
+
+.group-name strong {
+	color: #666;
+}
+
+.course-header i{
+	font-size: 16px;
 }
